feat: setup single line input cell

--- a/Join/View/FindPartners.storyboard
+++ b/Join/View/FindPartners.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="62S-FJ-mnb">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -15,14 +16,26 @@
                     <view key="view" contentMode="scaleToFill" id="YeY-UP-RsE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Euo-4X-hoi">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="2dx-IE-Cn4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="Euo-4X-hoi" secondAttribute="bottom" id="8i7-CN-zni"/>
+                            <constraint firstItem="Euo-4X-hoi" firstAttribute="top" secondItem="YeY-UP-RsE" secondAttribute="top" id="Lmf-WV-ygp"/>
+                            <constraint firstItem="Euo-4X-hoi" firstAttribute="leading" secondItem="YeY-UP-RsE" secondAttribute="leading" id="WaO-sh-0N1"/>
+                            <constraint firstAttribute="trailing" secondItem="Euo-4X-hoi" secondAttribute="trailing" id="yCX-u3-6Gc"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="M22-8w-xxl"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w4a-XJ-N6B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-477" y="1637"/>
+            <point key="canvasLocation" x="390" y="889"/>
         </scene>
         <!--Item-->
         <scene sceneID="WWc-ce-wip">
