--- a/Join/View/FindPartners.storyboard
+++ b/Join/View/FindPartners.storyboard
@@ -9,10 +9,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Find Partners Basic View Controller-->
         <scene sceneID="t1m-gf-Rno">
             <objects>
-                <viewController id="tFX-yR-3xX" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="w4a-XJ-N6B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="FindPartnersBasicViewController" id="tFX-yR-3xX" customClass="FindPartnersBasicViewController" customModule="Join" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YeY-UP-RsE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -32,8 +33,10 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="M22-8w-xxl"/>
+                    <connections>
+                        <outlet property="tableView" destination="Euo-4X-hoi" id="vbX-WO-fHN"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="w4a-XJ-N6B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="390" y="889"/>
         </scene>
