--- a/Join/View/Form/GoNextPageCell.xib
+++ b/Join/View/Form/GoNextPageCell.xib
@@ -24,6 +24,9 @@
                             <constraint firstAttribute="height" constant="31" id="9ab-l8-hSI"/>
                         </constraints>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                        <connections>
+                            <action selector="buttonTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="DG7-u7-HVH"/>
+                        </connections>
                     </button>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="La2-33-idV">
                         <rect key="frame" x="276" y="22" width="20" height="19"/>
