--- a/Join/View/Form/GoSelectionCell.xib
+++ b/Join/View/Form/GoSelectionCell.xib
@@ -11,11 +11,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="66" id="KGk-i7-Jjw" customClass="GoSelectionCell" customModule="Join" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="66"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GoSelectionCell" rowHeight="66" id="KGk-i7-Jjw" customClass="GoSelectionCell" customModule="Join" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="66"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k54-CI-UHK">
@@ -67,7 +67,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="button" destination="k54-CI-UHK" id="1Gy-xD-XeC"/>
-                <outlet property="chevronRightImageView" destination="k54-CI-UHK" id="bCH-Ni-8uf"/>
+                <outlet property="chevronDownImageView" destination="k54-CI-UHK" id="bCH-Ni-8uf"/>
                 <outlet property="mustFillSignLabel" destination="YcQ-lb-46V" id="gCJ-Ks-3MG"/>
                 <outlet property="titleLable" destination="Yqg-Ml-Vg5" id="V7H-zy-96v"/>
             </connections>
