--- a/Join/View/Personal.storyboard
+++ b/Join/View/Personal.storyboard
@@ -9,17 +9,32 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Personal Entry View Controller-->
         <scene sceneID="sSb-RJ-1fL">
             <objects>
-                <viewController id="MLK-11-6FV" sceneMemberID="viewController">
+                <viewController id="MLK-11-6FV" customClass="PersonalEntryViewController" customModule="Join" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="txO-pl-X7W">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="BKN-rX-dkv">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="OP4-GL-LGH"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="OP4-GL-LGH" firstAttribute="trailing" secondItem="BKN-rX-dkv" secondAttribute="trailing" id="Ara-zT-w6R"/>
+                            <constraint firstAttribute="bottom" secondItem="BKN-rX-dkv" secondAttribute="bottom" id="CvM-iO-u6C"/>
+                            <constraint firstItem="BKN-rX-dkv" firstAttribute="top" secondItem="txO-pl-X7W" secondAttribute="top" id="T1Y-zR-NHb"/>
+                            <constraint firstItem="BKN-rX-dkv" firstAttribute="leading" secondItem="OP4-GL-LGH" secondAttribute="leading" id="ssp-OJ-eji"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="r4L-1S-6xG"/>
+                    <connections>
+                        <outlet property="tableView" destination="BKN-rX-dkv" id="YP2-He-dhG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aKv-pZ-zhL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
