--- a/Join/View/Personal.storyboard
+++ b/Join/View/Personal.storyboard
@@ -40,6 +40,43 @@
             </objects>
             <point key="canvasLocation" x="2032" y="909"/>
         </scene>
+        <!--Personal Profile View Controller-->
+        <scene sceneID="isS-5h-Ntu">
+            <objects>
+                <viewController storyboardIdentifier="PersonalProfileViewController" id="kDF-IZ-AFp" customClass="PersonalProfileViewController" customModule="Join" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="asg-CJ-EeZ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7gb-lM-7Ew">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vW8-AY-1Im">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="u4Z-sf-bV3"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="u4Z-sf-bV3" firstAttribute="trailing" secondItem="7gb-lM-7Ew" secondAttribute="trailing" id="Bfw-cb-Mcv"/>
+                            <constraint firstItem="7gb-lM-7Ew" firstAttribute="leading" secondItem="u4Z-sf-bV3" secondAttribute="leading" id="Qpf-t8-yij"/>
+                            <constraint firstItem="7gb-lM-7Ew" firstAttribute="top" secondItem="asg-CJ-EeZ" secondAttribute="top" id="b4g-2Q-dAD"/>
+                            <constraint firstAttribute="bottom" secondItem="7gb-lM-7Ew" secondAttribute="bottom" id="oAl-Ey-kLU"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="7gb-lM-7Ew" id="i3W-HY-WdW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R8T-26-ecN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2893" y="909"/>
+        </scene>
         <!--Item-->
         <scene sceneID="BFG-DT-NJj">
             <objects>
