--- a/Join/View/Chat.storyboard
+++ b/Join/View/Chat.storyboard
@@ -25,6 +25,46 @@
             </objects>
             <point key="canvasLocation" x="1229" y="909"/>
         </scene>
+        <!--Chatroom View Controller-->
+        <scene sceneID="Lvr-VK-4cv">
+            <objects>
+                <viewController storyboardIdentifier="ChatroomViewController" id="0fi-i8-UF1" customClass="ChatroomViewController" customModule="Join" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pCQ-Y8-CIi">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Emp-Ci-dnp">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="806"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5i9-X7-Cya" customClass="MessageTypingSuperview" customModule="Join" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="806" width="414" height="90"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="DxK-z1-xbo"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="f9r-D5-fSc"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="5i9-X7-Cya" firstAttribute="top" secondItem="Emp-Ci-dnp" secondAttribute="bottom" id="4P4-oU-is3"/>
+                            <constraint firstItem="Emp-Ci-dnp" firstAttribute="leading" secondItem="f9r-D5-fSc" secondAttribute="leading" id="4te-DO-5Xl"/>
+                            <constraint firstItem="f9r-D5-fSc" firstAttribute="trailing" secondItem="Emp-Ci-dnp" secondAttribute="trailing" id="B2G-FY-GI7"/>
+                            <constraint firstItem="5i9-X7-Cya" firstAttribute="leading" secondItem="f9r-D5-fSc" secondAttribute="leading" id="Crt-c6-2Cp"/>
+                            <constraint firstAttribute="bottom" secondItem="5i9-X7-Cya" secondAttribute="bottom" id="gS7-rk-Jde"/>
+                            <constraint firstItem="Emp-Ci-dnp" firstAttribute="top" secondItem="pCQ-Y8-CIi" secondAttribute="top" id="l81-E8-8QV"/>
+                            <constraint firstItem="5i9-X7-Cya" firstAttribute="trailing" secondItem="f9r-D5-fSc" secondAttribute="trailing" id="lWP-CN-KF5"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="Emp-Ci-dnp" id="nSP-Ju-VQb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bLx-R3-CqK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2031.8840579710147" y="908.70535714285711"/>
+        </scene>
         <!--Item-->
         <scene sceneID="XYW-fG-2wx">
             <objects>
